# SpaceY

./: CMakeLists.txt  README
include/: draw.h  game.h  info.h  input.h  main.h  menu.h  settings.h
src/: draw.c  game.c  info.c  input.c  main.c  menu.c  settings.c
